# GOMO

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.intel  Makefile.mpich  README.md  aclocal.m4  config.status  configure  configure.ac  makefile  makefile-bsub  makefile.intel  makefile.linux  makefile.macos
docs/: README
lib/: README.md
pre/: areas_masks.m  dens.m  depth.m  init_constants.m  init_global.m  init_values.m  init_variables.m  ncfile_main.m  pre_main.m  read_basic_variables.m  readme  run_preprocess.m  seamount.m  write_init_variables.m  write_netcdf.m  ztosig.m
src/: TAGS  adjust_ufvf.F90  adjust_uv.F90  advave.F90  advct.F90  advt2.F90  baropg.F90  bcond1.F90  bcond2_ua.F90  bcond2_va.F90  bcond3_u.F90  bcond3_v.F90  bcond4.F90  bcond6.F90  bottom_friction.F90  common.h  config.F90  create_tags.sh  dens.F90  external_el.F90  external_ua.F90  external_update.F90  external_va.F90  get_time.F90  gomo.F90  init_fields.F90  internal_q.F90  internal_t.F90  internal_u.F90  internal_update.F90  internal_v.F90  internal_w.F90  kernels.bak  lateral_bc.F90  lateral_viscosity.F90  macro.h  mode_interaction.F90  oa_kernels.F90  oa_kernels.fypp  pom2k.F90  (+9 more)
